--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -39,6 +39,7 @@ dp$clusterLabels
 pairs(~ EXT1 + EXT2 + EXT3 + EXT4, data=temp, col=dp$clusterLabels)
 ```
 
+## first 50 columns, first 100 rows
 
 ```{r}
 partial_df = (df[colnames(df)[1:50]])
@@ -50,5 +51,26 @@ dp = Fit(dp, 1000)
 
 ```{r}
 dp$clusterLabels
+```
 
+```{r}
+pairs(~ EXT1 + EXT2 + EXT3 + EXT4 + EXT5, data=temp, col=dp$clusterLabels)
+```
+
+## first 50 columns, first 100k rows
+```{r}
+partial_df = (df[colnames(df)[1:50]])
+row_nums = sample(1:dim(df)[1], 10000)
+temp = sapply(partial_df[row_nums,], as.numeric)
+temp = scale(temp)
+dp = DirichletProcessMvnormal(as.matrix(temp))
+dp = Fit(dp, 1000)
+```
+
+```{r}
+dp$clusterLabels
+```
+
+```{r}
+pairs(~ EXT1 + EXT2 + EXT3 + EXT4 + EXT5, data=temp, col=dp$clusterLabels)
 ```
