--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -9,6 +9,8 @@ output: pdf_document
 library(ggplot2)
 library(dirichletprocess)
 library(dplyr)
+library(mixdir)
+library(pheatmap)
 ```
 
 ```{r}
@@ -21,6 +23,24 @@ head(df)
 partial_df = (df[colnames(df)[1:100]])
 head(partial_df)
 ```
+
+
+## trying mixdir
+```{r}
+partial_50 = (df[colnames(df)[1:50]])
+result <- mixdir(partial_50[1:500,])
+```
+
+```{r}
+pheatmap::pheatmap(result$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality", 1:5))
+```
+
+```{r}
+def_feat <- find_defining_features(result, partial_50, n_features = 3)
+print(def_feat)
+```
+
 
 ## just the first 10 rows, first 100 columns
 
@@ -39,11 +59,11 @@ dp$clusterLabels
 pairs(~ EXT1 + EXT2 + EXT3 + EXT4, data=temp, col=dp$clusterLabels)
 ```
 
-## first 50 columns, first 100 rows
+## first 50 columns, first 500 rows
 
 ```{r}
 partial_df = (df[colnames(df)[1:50]])
-temp = sapply(partial_df[1:100,], as.numeric)
+temp = sapply(partial_df[1:500,], as.numeric)
 temp = scale(temp)
 dp = DirichletProcessMvnormal(as.matrix(temp))
 dp = Fit(dp, 1000)
@@ -56,6 +76,24 @@ dp$clusterLabels
 ```{r}
 pairs(~ EXT1 + EXT2 + EXT3 + EXT4 + EXT5, data=temp, col=dp$clusterLabels)
 ```
+
+## first 100 columns, first 500 rows
+```{r}
+partial_df = (df[colnames(df)[1:100]])
+temp = sapply(partial_df[1:500,], as.numeric)
+temp = scale(temp)
+dp_100 = DirichletProcessMvnormal(as.matrix(temp))
+dp_100 = Fit(dp_100, 1000)
+```
+
+```{r}
+dp_100$clusterLabels
+```
+
+```{r}
+pairs(~ EXT1 + EXT2 + EXT3 + EXT4 + EXT5, data=temp, col=dp_100$clusterLabels)
+```
+
 
 ## first 50 columns, first 100k rows
 ```{r}
