--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -610,10 +610,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_q_clean.to_csv(\"time_cleaned.csv\")"
+   ]
   },
   {
    "cell_type": "code",
