--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -620,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1102,6 +1104,17 @@
    "outputs": [],
    "source": [
     "# mean_df.to_csv(\"means.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git filter-branch --force --index-filter \\\n",
+    "  'git rm --cached --ignore-unmatch data_cleaned.csv' \\\n",
+    "  --prune-empty --tag-name-filter cat -- --all"
    ]
   },
   {
