--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -12,6 +12,8 @@ library(dplyr)
 library(mixdir)
 library(pheatmap)
 library(tidyr)
+library(mclust)
+library(cluster)
 ```
 
 # EDA / Data Wrangling
@@ -39,7 +41,6 @@ dim(na.omit(partial_df))
 partial_df[partial_df==0] = NA
 partial_df = na.omit(partial_df)
 dim(partial_df)
-
 ```
 
 
@@ -78,6 +79,7 @@ head(df)
 
 ```{r}
 result <- mixdir(df[1:500,])
+
 ```
 
 ```{r}
@@ -94,3 +96,85 @@ plot_features(def_feat$features, result$category_prob)
 ```
 
 
+## Mixdir Random Samples: Dirichlet Process
+
+```{r}
+clean_data <- read.csv("clean_data.csv")[2:51]
+```
+
+```{r}
+set.seed(1)
+random_df1 <- sample_n(clean_data, 1000)
+result1_dp <- mixdir(random_df1, select_latent = TRUE)
+pheatmap::pheatmap(result1_dp$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+
+random_df_country1 <- sample_n(clean_data_country, 1000)
+result1_dp_country <- mixdir(random_df_country1, select_latent = TRUE)
+pheatmap::pheatmap(result1_dp_country$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+
+```
+
+```{r}
+set.seed(2)
+random_df2 <- sample_n(clean_data, 1000)
+result2_dp <- mixdir(random_df2, select_latent = TRUE)
+pheatmap::pheatmap(result2_dp$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+```
+
+```{r}
+set.seed(3)
+random_df3 <- sample_n(clean_data, 1000)
+result3_dp <- mixdir(random_df3, select_latent = TRUE)
+pheatmap::pheatmap(result3_dp$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+```
+
+## Mixdir Random Samples: Dirichlet
+
+```{r}
+result1_d <- mixdir(random_df1, n_latent = 5)
+pheatmap::pheatmap(result1_d$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+```
+
+```{r}
+result2_d <- mixdir(random_df2, n_latent = 5)
+pheatmap::pheatmap(result2_d$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+```
+
+```{r}
+result3_d <- mixdir(random_df3, n_latent = 5)
+pheatmap::pheatmap(result3_d$class_prob, cluster_cols=FALSE,
+                  labels_col = paste("Personality"))
+```
+
+## K-modes algorithm 
+
+```{r}
+km_dp <- kmodes(random_df_country1, 3)
+lca2_dp <- poLCA(f, random_df2, nclass = 5)
+lca3_dp <- poLCA(f, random_df3, nclass = 5)
+```
+
+```{r}
+f <- cbind(EXT1, EXT2, EXT3, EXT4, EXT5, EXT6, EXT7, EXT8, EXT9, EXT10, EST1, EST2, EST3, EST4, EST5, EST6, EST7, EST8, EST9, EST10, AGR1, AGR2, AGR3, AGR4, AGR5, AGR6, AGR7, AGR8, AGR9, AGR10, CSN1, CSN2, CSN3, CSN4, CSN5, CSN6, CSN7, CSN8, CSN9, CSN10, OPN1, OPN2, OPN3, OPN4, OPN5, OPN6, OPN7, OPN8, OPN9, OPN10) ~ 1
+lca1_d <- poLCA(f, random_df1, nclass = 5)
+mmc1_d <- mixmodCluster(random_df1, 5)
+```
+
+## ARI comparison 
+```{r}
+adjustedRandIndex(result1_dp_country$pred_class, km_dp$cluster)
+adjustedRandIndex(result2_dp$pred_class, lca2_dp$cluster)
+adjustedRandIndex(result3_dp$pred_class, lca3_dp$cluster)
+```
+
+```{r}
+adjustedRandIndex(result1_d$pred_class, mmc1_d[12])
+adjustedRandIndex(result2_d$pred_class, km2_d$cluster)
+adjustedRandIndex(result3_d$pred_class, km3_d$cluster)
+```
