--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -133,7 +133,7 @@ latent_class <- which(all_lca_ari == max(all_lca_ari)) + 1
 result_final <- mixdir(random_total, n_latent = latent_class)
 
 pheatmap::pheatmap(result_final$class_prob, cluster_cols=FALSE,
-                  labels_col = paste("Personality"))
+                  labels_col = paste("Personality", 1:3))
 ```
 
 ```{r}
