--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -106,6 +106,12 @@ pheatmap::pheatmap(result_initial$class_prob, cluster_cols=FALSE,
                   labels_col = paste("Personality", 1:3))
 ```
 
+```{r}
+def_feat_init <- find_defining_features(result_initial, random_total)
+plot_features(head(def_feat_init$features, 3), result_initial$category_prob)
+```
+
+
 ## mixdir Random Samples: Dirichlet
 
 ```{r}
@@ -128,7 +134,6 @@ for (i in 2:32) {
 ## Final Result
 
 ```{r}
-max(all_km_ari)
 max(all_lca_ari)
 ```
 
@@ -143,10 +148,5 @@ pheatmap::pheatmap(result_final$class_prob, cluster_cols=FALSE,
 
 ```{r}
 def_feat <- find_defining_features(result_final, random_total)
-print(def_feat)
+plot_features(head(def_feat$features, 3), result_final$category_prob)
 ```
-
-```{r}
-plot_features(head(def_feat$features, 5), result_final$category_prob)
-```
-
